@@ -1,5 +1,12 @@
 2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	* main.c: Implement -U filename as a shorthand for
+	-U flash:w:filename:a.
+	* avrdude.1: Document this.
+	* doc/avrdude.texi: (Ditto.)
+
+2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	Implement numerical output formats for decimal, hexadecimal,
 	octal, and binary numbers.
 	Closes bug #16129: more output formats for fuse bits
